dinoco/tests/ui/fail/extend_wrong_type.stderr
error[E0308]: mismatched types
  --> tests/ui/fail/extend_wrong_type.rs:29:5
   |
29 |     createdAt: String,
   |     ^^^^^^^^^--------
   |     |
   |     expected `&String`, found `&DateTimeUtc<Utc>`
   |     expected due to this
   |
   = note: expected reference `&std::string::String`
              found reference `&DateTimeUtc<Utc>`
